# bulwark

./: .dryrunsecurity.yaml  .editorconfig  .gitattributes  .gitignore  ATTRIBUTIONS.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  bulwark-host.wit  deny.toml  http-detection.md  interface.wit  platform.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependencies.yml  publish-crate.yml  publish-release.yml  rust.yml  semgrep.yml
adapter/: README.md  git-sha
container/: .melangeignore  apko.yaml  melange.yaml
crates/config/: Cargo.toml  README.md
crates/config/src/: config.rs  errors.rs  file.rs  lib.rs  toml.rs  toml_file.rs
crates/config/test/: bulwark-blank-slate.wasm  include.toml  main.toml
crates/config/tests/: bulwark_blank_slate.wasm  bulwark_evil_bit.wasm  circular.toml  circular_include.toml  circular_preset.toml  duplicate_mixed.toml  duplicate_plugin.toml  duplicate_preset.toml  exact_resource_route.toml  include.toml  inexact_resource_route.toml  invalid_config_array.toml  invalid_config_object.toml  invalid_plugin_reference.toml  main.toml  missing.toml  missing_include.toml  missing_plugin.toml  missing_reference.toml  nonprefixed_resource_route.toml  overlapping_preset.toml  prefixed_resource_route.toml  valid_numeric_plugin_reference.toml
crates/core/: Cargo.toml  README.md
crates/core/src/: bundle.rs  decision.rs  errors.rs  lib.rs
crates/decision/: Cargo.toml  README.md
crates/decision/src/: decision.rs  lib.rs
crates/ext-filter/: Cargo.toml
crates/ext-filter/examples/: temp-envoy-simple.yaml  temp-envoy.yaml
crates/ext-filter/src/: errors.rs  headers.rs  lib.rs  main.rs  service.rs
crates/ext-processor/: Cargo.toml  README.md  build.rs
crates/ext-processor/examples/: envoy.yaml
crates/ext-processor/protobuf/: ACKNOWLEDGEMENTS  AUTHORS
crates/ext-processor/protobuf/protoc-gen-validate/tests/: go.mod  go.sum
crates/ext-processor/protobuf/xds/go/: go.mod
crates/ext-processor/src/: errors.rs  format.rs  headers.rs  lib.rs  protobuf.rs  service.rs
crates/host/: Cargo.toml  README.md
crates/host/src/: context.rs  errors.rs  from.rs  plugin.rs
crates/sdk/: Cargo.toml  README.md
crates/sdk-macros/: Cargo.toml  README.md
crates/sdk-macros/src/: lib.rs
crates/sdk/examples/blank-slate/: Cargo.toml
crates/sdk/examples/blank-slate/src/: lib.rs
crates/sdk/examples/evil-bit/: Cargo.toml
crates/sdk/examples/evil-bit/src/: lib.rs
crates/sdk/src/: errors.rs  from.rs  host_api.rs  http.rs  lib.rs  redis.rs
crates/wasm-host/: .gitignore  Cargo.toml  README.md  build.rs
crates/wasm-host/src/: context.rs  errors.rs  from.rs  lib.rs  plugin.rs
crates/wasm-host/test/: bulwark-blank-slate.wasm
crates/wasm-host/tests/: bulwark-evil-bit.wasm  bulwark_blank_slate.wasm  bulwark_evil_bit.wasm  redis_test.rs  wasi_snapshot_preview1.reactor.wasm
crates/wasm-sdk/: Cargo.toml  build.rs
crates/wasm-sdk-macros/: ATTRIBUTION.md  Cargo.toml
crates/wasm-sdk-macros/src/: lib.rs
crates/wasm-sdk/examples/blank-slate/: Cargo.toml
crates/wasm-sdk/examples/blank-slate/src/: lib.rs  main.rs
crates/wasm-sdk/examples/evil-bit/: Cargo.toml
crates/wasm-sdk/examples/evil-bit/src/: lib.rs  main.rs
crates/wasm-sdk/examples/evil-bit/wit/: plugin.wit
crates/wasm-sdk/src/: decision.rs  errors.rs  from.rs  host_api.rs  host_calls.rs  lib.rs  mass_function.rs  redis.rs
docs/: README.md
lib/ext-filter/: Cargo.toml
lib/ext-filter/src/: service.rs
lib/wasm-host/: Cargo.toml
lib/wasm-host/src/: errors.rs  lib.rs  plugin.rs
lib/wasm-sdk/: .gitignore  Cargo.toml
lib/wasm-sdk/examples/: dont_know.rs  evil_param.rs
lib/wasm-sdk/src/: allocator.rs  dispatcher.rs  hostcalls.rs  lib.rs  logger.rs  traits.rs  types.rs
scripts/: publish.rs
src/: admin.rs  build.rs  bundle.rs  component.rs  config.rs  decisions.rs  ecs.rs  errors.rs  lib.rs  main.rs
supply-chain/: README.md  config.toml
test/: bulwark-blank-slate.wasm  bulwark-evil-bit.wasm  main.toml
tests/: README.md  build_plugin.rs  bulwark.toml  envoy.rs  envoy.yaml  exec_plugin.rs  gha_envoy.yaml  local_envoy.yaml  multi_phase.rs  multi_phase.toml  redis.rs  smoke_test.rs  smoke_test.toml
tests/plugins/multi-phase-plugin-a/: Cargo.toml
tests/plugins/multi-phase-plugin-a/src/: lib.rs
tests/plugins/multi-phase-plugin-b/: Cargo.toml
tests/plugins/multi-phase-plugin-b/src/: lib.rs
tests/plugins/redis-plugin/: Cargo.toml
tests/plugins/redis-plugin/src/: lib.rs
tests/plugins/smoke-test/: Cargo.toml
tests/plugins/smoke-test/src/: lib.rs
wit/: config.wit  deps.toml  environment.wit  handlers.wit  http.wit  platform.wit  plugin.wit  redis.wit  types.wit
