[package]
name = "bulwark-config"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://bulwark.security/"
repository = "https://github.com/bulwark-security/bulwark"
readme = "README.md"
keywords = ["bulwark", "security", "fraud", "webassembly", "wasm"]
categories = ["wasm"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
bulwark-decision = { path = "../decision", version = "0.1.0" }
serde = { version = "1.0.149", features = ["std", "serde_derive"] }
serde_json = "1.0.93"
toml = { version = "0.5.9", features = ["preserve_order"] }
thiserror = "1.0.37"
chrono = { version = "0.4.23", features = ["serde"] }
