[package]
name = "bulwark-config"
description = "Configuration for the Bulwark security engine."
version.workspace = true
edition.workspace = true
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://bulwark.security/"
repository = "https://github.com/bulwark-security/bulwark"
readme = "README.md"
keywords = ["bulwark", "configuration"]
categories = ["wasm"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
bulwark-decision = { workspace = true }

bytes = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
validator = { workspace = true }

itertools = "0.13.0"
lazy_static = "1.4.0"
regex = "1.9.1"
num_cpus = "^1.11.1"

[dev-dependencies]
bulwark-build = { workspace = true }

matchit = { workspace = true }
