[package]
name = "bulwark-decision"
description = "Decision-making under uncertainty for the Bulwark security engine."
version = "0.3.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://bulwark.security/"
repository = "https://github.com/bulwark-security/bulwark"
readme = "README.md"
keywords = ["bulwark", "security", "fraud", "detection"]
categories = ["wasm"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
thiserror = { workspace = true }
validator = { workspace = true }

strum = "0.25"
strum_macros = "0.25"

[dev-dependencies]
approx = { workspace = true }

cfg-if = "1.0"
