[package]
name = "bulwark-decision"
description = "Decision-making under uncertainty for the Bulwark security engine."
version.workspace = true
edition.workspace = true
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://bulwark.security/"
repository = "https://github.com/bulwark-security/bulwark"
readme = "README.md"
keywords = ["bulwark", "security", "fraud", "detection"]
categories = ["wasm"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
thiserror = { workspace = true }
validator = { workspace = true }
approx = { workspace = true }

strum = "0.26"
strum_macros = "0.26"

[dev-dependencies]
cfg-if = "1.0"
