[package]
name = "bulwark-ext-filter"
version = "0.1.0"
edition = "2021"

[dependencies]
bulwark-config = { path = "../config" }
bulwark-wasm-host = { path = "../wasm-host" }
bulwark-wasm-sdk = { path = "../wasm-sdk" }
bytes = "1"
clap = { version = "3.0.14", features = ["derive"] }
envoy-control-plane = { version = "0.4.0", features = ["grpc"] }
futures = "0.3"
json = "0.12.4"
prost = "0.9"
prost-wkt = "=0.3.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.6.2"
http = "0.2"
anyhow = "1.0.66"
thiserror = "1.0.37"
matchit = "0.7.0"
sfv = "0.9.2"
tracing = "0.1.37"
r2d2_redis = "0.14.0"
r2d2 = "0.8.10"

[build-dependencies]
prost-wkt-build = "=0.3.0"
