[package]
name = "bulwark-ext-processor"
description = "An Envoy external processor for the Bulwark security engine."
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://bulwark.security/"
repository = "https://github.com/bulwark-security/bulwark"
readme = "README.md"
keywords = ["bulwark", "envoy"]
categories = ["wasm"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
bulwark-config = { path = "../config", version = "0.1.0" }
bulwark-wasm-host = { path = "../wasm-host", version = "0.1.0" }
bulwark-wasm-sdk = { path = "../wasm-sdk", version = "0.1.0" }
bytes = "1"
clap = { version = "4.2.7", features = ["derive"] }
envoy-control-plane = { version = "0.4.0", features = ["grpc"] }
futures = "0.3"
json = "0.12.4"
prost = "0.11"
prost-wkt = "=0.3.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "=0.6.2"
http = "0.2"
thiserror = "1.0.37"
matchit = "0.7.0"
sfv = "0.9.2"
tracing = "0.1.37"
redis = { version = "0.23.0", features = [
    "tokio-comp",
    "tokio-native-tls-comp",
    "cluster",
    "r2d2",
] }
r2d2 = "0.8.10"
forwarded-header-value = "0.1.1"

[build-dependencies]
# This dependency declaration and the other prost dependencies above prevent `cargo update`
# and other parts of cargo from upgrading to > 0.3.0, which would break the build.
prost-wkt-build = "=0.3.0"
