[package]
name = "bulwark-ext-processor"
description = "An Envoy external processor for the Bulwark security engine."
version.workspace = true
edition.workspace = true
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://bulwark.security/"
repository = "https://github.com/bulwark-security/bulwark"
readme = "README.md"
keywords = ["bulwark", "envoy"]
categories = ["wasm"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
bulwark-config = { workspace = true }
bulwark-host = { workspace = true }
bulwark-sdk = { workspace = true }

deadpool-redis = { workspace = true }
forwarded-header-value = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
metrics = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

bytes = "1"
json = "0.12.4"
matchit = "0.7.0"
prost = "^0.11"
prost-wkt = "=0.4.2"
prost-wkt-types = "^0.4"
sfv = "0.9.2"
pbjson = "^0.5"
pbjson-types = "^0.5"
typetag = "^0.2"

[dev-dependencies]
redis-test = { workspace = true }

[build-dependencies]
# This dependency declaration and the other prost dependencies above prevent `cargo update`
# and other parts of cargo from upgrading to > 0.3.0, which would break the build.
prost-wkt-build = "=0.3.0"
pbjson-build = "0.6.2"
tonic-build = "0.9.2"

[lib]
# Disable doctests for this crate because we can't easily disable them only for generated files.
doctest = false
