[package]
name = "bulwark-host"
description = "The WebAssembly host environment for the Bulwark security engine."
version.workspace = true
edition.workspace = true
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://bulwark.security/"
repository = "https://github.com/bulwark-security/bulwark"
readme = "README.md"
keywords = ["bulwark", "security", "fraud", "detection", "webassembly"]
categories = ["wasm"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
bulwark-config = { workspace = true }
bulwark-sdk = { workspace = true }

wasi-common = { workspace = true }
wasmtime = { workspace = true }
wasmtime-types = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }

anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
deadpool-redis = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
metrics = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
validator = { workspace = true }

async-trait = "0.1.68"
http-body-util = "0.1.0"

[dev-dependencies]
bulwark-build = { workspace = true }
redis-test = { workspace = true }

wat = { workspace = true }
wit-component = { workspace = true }

[build-dependencies]
reqwest = { workspace = true }
