[package]
name = "bulwark-sdk"
description = "The WebAssembly SDK for the Bulwark security engine."
version.workspace = true
edition.workspace = true
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://bulwark.security/"
repository = "https://github.com/bulwark-security/bulwark"
readme = "README.md"
keywords = ["bulwark", "security", "fraud", "detection", "webassembly"]
categories = ["wasm"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
bulwark-decision = { workspace = true }
bulwark-sdk-macros = { workspace = true }

wit-bindgen = { workspace = true }

anyhow = { workspace = true }
bytes = { workspace = true }
forwarded-header-value = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
cfg-if = "1.0"
