[package]
name = "bulwark-wasm-sdk"
description = "The WebAssembly SDK for the Bulwark security engine."
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://bulwark.security/"
repository = "https://github.com/bulwark-security/bulwark"
readme = "README.md"
keywords = ["bulwark", "security", "fraud", "detection", "webassembly", "wasm"]
categories = ["wasm"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
bulwark-decision = { path = "../decision", version = "0.1.0" }
thiserror = "1.0.37"
http = "0.2"
validator = { version = "0.12", features = ["derive"] }
approx = "0.4"
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" } # 0.2.0, aka wit-bindgen-guest-rust
serde_json = "1.0.93"

[dev-dependencies]
cfg-if = "1.0"
