[package]
name = "bulwark-wasm-sdk"
description = "The WebAssembly SDK for the Bulwark security engine."
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://bulwark.security/"
repository = "https://github.com/bulwark-security/bulwark"
readme = "README.md"
keywords = ["bulwark", "security", "fraud", "detection", "webassembly", "wasm"]
categories = ["wasm"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
bulwark-decision = { path = "../decision", version = "0.2.0" }
bulwark-wasm-sdk-macros = { path = "../wasm-sdk-macros", version = "0.2.0" }
thiserror = "1.0.37"
anyhow = "1"
http = "0.2"
validator = { version = "0.16" }
approx = "0.5"
wit-bindgen = "0.7.0"
serde_json = "1.0.93"
proc-macro2 = "1.0.59"

[dev-dependencies]
cfg-if = "1.0"
