[package]
name = "bulwark-wasm-sdk"
description = "The WebAssembly SDK for the Bulwark security engine."
version = "0.3.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://bulwark.security/"
repository = "https://github.com/bulwark-security/bulwark"
readme = "README.md"
keywords = ["bulwark", "security", "fraud", "detection", "webassembly"]
categories = ["wasm"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
bulwark-decision = { workspace = true }
bulwark-wasm-sdk-macros = { workspace = true }

wit-bindgen = { workspace = true }

anyhow = { workspace = true }
http = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
cfg-if = "1.0"
